@@ -4,7 +4,7 @@
 </head>
 <body>
 <ul>
-<li></li>
+<li>Fix appearance of search field in toolbar when using small size.</li>
 </ul>
 </body>
 </html>
