@@ -10,6 +10,7 @@ Thanks!
 
 2.2.1.2210
 ----------
+- Fix appearance of search field in toolbar when using small size.
 
 2.2.0.2209
 ----------
